--- a/desktop-view-styles.css
+++ b/desktop-view-styles.css
@@ -15,7 +15,7 @@
 body {
     display: flex;
     flex-direction: column;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 p {
@@ -32,6 +32,7 @@ p {
    display: grid;
    /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+   gap: 20px;
 }
 
 .suv {
@@ -109,8 +110,23 @@ main {
 
 .hero-image {
     width: 100%;
-    height: auto;
+    height: 700px;
     background-position: center;
+    position: relative;
+}
+
+.hr-c {
+   position: absolute;
+   top: 0px;
+   background-color: green;
+   color: white;
+   width: 100%;
+   height: 50px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font-size: 22px;
+   opacity: 0.8;
 }
 
 /* form {
@@ -180,7 +196,7 @@ legend {
     display: flex;
     flex-direction: column;
     gap: 30px;
-    margin-top: 50px;
+    margin: 50px 25px 50px 25px;
 }
 
 .purpose li p {
