--- a/mobile-view-styles.css
+++ b/mobile-view-styles.css
@@ -2,12 +2,16 @@
   /* body {
     background-color: bisque;
   } */
+
+  .hr-c {
+   font-size: 16px;
+}
    .survey {
    grid-template-columns: repeat(auto-fit, minmax(200px, 200px));
    justify-content: center;
 }
 nav ul li a {
-    font-size: 16px;
+    font-size: 14px;
     
 }
   .barbing fieldset {
@@ -21,6 +25,11 @@ nav ul li a {
 .art-b {
     justify-content: center;
     align-items: center;
+}
+.hero-image {
+    width: 100%;
+    height: auto;
+    background-position: center;
 }
 /* .join {
    margin: 0 auto;
