--- a/tablet-view-styles.css
+++ b/tablet-view-styles.css
@@ -2,4 +2,9 @@
   /* body {
     background-color: aquamarine;
   } */
+   .hero-image {
+    width: 100%;
+    height: auto;
+    background-position: center;
+}
 }
