--- a/desktop-view-styles.css
+++ b/desktop-view-styles.css
@@ -103,6 +103,7 @@ nav ul li a {
 
 /* main */
 
+
 main {
     position: relative;
     top: 120px;
@@ -118,7 +119,7 @@ main {
 .hr-c {
    position: absolute;
    top: 0px;
-   background-color: green;
+   /* background-color: green; */
    color: white;
    width: 100%;
    height: 50px;
@@ -127,6 +128,34 @@ main {
    align-items: center;
    font-size: 22px;
    opacity: 0.8;
+}
+.hr-c.message{
+    display:block;
+    text-align:center;
+    color:#fff;
+    margin-top:1rem;
+    transition: opacity .6s ease, transform .6s ease;
+    opacity:1;
+    transform:translateY(0);
+}
+.hr-c.message.fade-out{
+    opacity:0;
+    transform:translateY(-8px);
+} 
+
+.msg {
+    background-color: hotpink;
+}
+
+h3 {
+    color: var(--text-color);
+}
+
+.w-suv {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 10px;
+    text-align: center;
 }
 
 /* form {
