--- a/desktop-view-styles.css
+++ b/desktop-view-styles.css
@@ -158,6 +158,11 @@ h3 {
     text-align: center;
 }
 
+.w-suv p {
+    word-spacing: 4px;
+    font-size: 18px;
+}
+
 /* form {
     border: 1px solid black;
     max-width: 867px;
