--- a/desktop-view-styles.css
+++ b/desktop-view-styles.css
@@ -243,4 +243,45 @@ footer {
     position: relative;
     top: 120px;
     margin-top: 200px;
+    padding: 10px;
 }
+
+.FTNlogo {
+    width: 100px;
+    height: 50px;
+    background-color: white;
+}
+
+footer p {
+    color: white;
+}
+
+.footer-con {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.social-media a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+}
+
+.social-media{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.quick-links {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.quick-links a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+}
+
