--- a/mobile-view-styles.css
+++ b/mobile-view-styles.css
@@ -35,4 +35,9 @@ nav ul li a {
    margin: 0 auto;
    padding: 15px 25px 15px 25px;
 } */
+ .footer-con {
+    flex-direction: column;
+    text-align: center;
+    gap: 30px;
+}
 }
